<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mtm9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/retangulo_arredondado"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mtm9txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtm9" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mtm5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/mtm9"
        android:layout_marginLeft="50dp"
        android:background="@drawable/retangulo_arredondado"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mtm5txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtm5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/port5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/mtm5"
        android:layout_alignLeft="@+id/mtm5"
        android:layout_marginBottom="15dp"
        android:background="@drawable/retangulo_arredondado"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/port5txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/port9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/mtm9"
        android:layout_alignTop="@+id/port5"
        android:background="@drawable/retangulo_arredondado"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/port9txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port9" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infosLayout"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_above="@+id/port5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/retangulo_arredondado"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/port5"
        android:layout_alignLeft="@+id/infosLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/retangulo_arredondado"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aprend"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>